# ai-learning-coach

./: .gitignore  DASHBOARD_CLEANUP.md  E2E_TEST_SUMMARY.md  PROGRESS.md  QUICK_START.md  README.md  SETUP_GUIDE.md  TEST_REPORT.md  TEST_RESULTS.md  VERIFICATION_COMPLETE.md  quick_test_ingestion.py  setup_and_test.py  test_e2e.py
.claude/tasks/: ai-learning-coach-mvp.md
dashboard/: app.py  digest_api.py  import_helper.py  ingestion_api.py
dashboard/.streamlit/: config.toml
dashboard/pages/: analytics.py  home.py  search.py
dashboard/views/: home.py  settings.py
database/: README.md  init_test_data.py  run_migration.py
database/migrations/: 001_initial_schema.sql  002_insert_test_data.sql  003_insert_test_data_with_rls_bypass.sql  004_add_test_user_rls_policies.sql
learning-coach-mcp/: .env.example  README.md  pyproject.toml
learning-coach-mcp/src/: __init__.py  config.py  server.py
learning-coach-mcp/src/ingestion/: __init__.py  chunker.py  embedder.py  orchestrator.py  rss_fetcher.py
learning-coach-mcp/src/integrations/: __init__.py  bootcamp.py
learning-coach-mcp/src/rag/: __init__.py  digest_generator.py  evaluator.py  insight_search.py  query_builder.py  retriever.py  synthesizer.py
learning-coach-mcp/src/tools/: __init__.py  feedback_handler.py  source_manager.py
learning-coach-mcp/src/ui/: __init__.py  daily_digest.py  weekly_summary.py
learning-coach-mcp/src/utils/: __init__.py  db.py
